# adaptive-stat-arb-commodities

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.cursor/rules/: project-rule.mdc
config/: settings.yaml
configs/: backtest.yaml  cointegration.yaml  evaluation.yaml  kalman.yaml  regime.yaml  signals.yaml  strategy.yaml  universe.yaml
notebooks/: 01_exploration.ipynb  02_feature_build.ipynb  03_modeling.ipynb  04_backtest.ipynb  05_results.ipynb
src/adaptive_stat_arb/utils/: config.py  constants.py  paths.py
src/backtesting/: __init__.py
src/data_pipeline/: __init__.py
src/features/: __init__.py
src/models/: __init__.py
src/trading/: __init__.py
src/utils/results/: __init__.py
src/utils/visualization/: __init__.py
tests/: test_data_integrity.py  test_model_stability.py  test_strategy_performance.py
